--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2576,6 +2576,7 @@ input[type="button"]:hover,
 .button:hover {
 	border-color: #49bf9d;
 	color: #49bf9d !important;
+	transform: scale(1.3);
 }
 
 input[type="submit"]:active,
