--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3553,13 +3553,12 @@ video {
 }
 
 
-.fade
-{
-    opacity:0;
+.fade {
+	opacity: 0;
 }
 
 @media (min-width: 480px) {
-	
+
 	.md\:h-\[200px\] {
 		height: 200px
 	}
@@ -3575,75 +3574,156 @@ video {
 	.xl\:h-\[400px\] {
 		height: 400px
 	}
-  }
-  
-  .slide-left {
+}
+
+.slide-left {
 	animation: slideLeft 1s ease-in-out;
 	opacity: 1;
-  }
-  
-  .slide-right {
+}
+
+.slide-right {
 	animation: slideRight 1s ease-in-out;
 	opacity: 1;
-  }
+}
 
-  .slide-up {
+.slide-up {
 	animation: slideUp 2s ease-in-out forwards;
-	transform: translateY(0); /* Change this line */
-  }
-  
-  @keyframes slideLeft {
-	from {
-	  transform: translateX(-100%);
-	  opacity: 0;
-	}
-	to {
-	  transform: translateX(0);
-	  opacity: 1;
-	}
-  }
-  
-  @keyframes slideRight {
-	from {
-	  transform: translateX(100%);
-	  opacity: 0;
-	}
-	to {
-	  transform: translateX(0);
-	  opacity: 1;
-	}
-  }
+	transform: translateY(0);
+	/* Change this line */
+}
 
-  @keyframes slideUp {
+@keyframes slideLeft {
 	from {
-	  transform: translateY(100%);
-	  opacity: 0;
+		transform: translateX(-100%);
+		opacity: 0;
 	}
+
 	to {
-	  transform: translateY(0);
-	  opacity: 1;
+		transform: translateX(0);
+		opacity: 1;
 	}
-  }
-  
-  html {
+}
+
+@keyframes slideRight {
+	from {
+		transform: translateX(100%);
+		opacity: 0;
+	}
+
+	to {
+		transform: translateX(0);
+		opacity: 1;
+	}
+}
+
+@keyframes slideUp {
+	from {
+		transform: translateY(100%);
+		opacity: 0;
+	}
+
+	to {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+
+html {
 	scroll-behavior: smooth;
-  }
+}
 
-  .footer-sticky {
-    position: fixed;
-    bottom: 2%;
-    z-index: 999;
+.footer-sticky {
+	position: fixed;
+	bottom: 2%;
+	z-index: 999;
 	display: flex;
 	justify-content: center;
 	transform: translateY(100%);
-  }
+}
 
-  .image-container {
+.image-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  }
-  
-  .bottom-space {
-	height: 25px; /* Adjust the height as needed */
-  }
+}
+
+.bottom-space {
+	height: 25px;
+	/* Adjust the height as needed */
+}
+
+.card {
+	margin-bottom: 60px;
+}
+
+.card {
+	position: relative;
+	overflow: hidden;
+	margin: 0.5rem 0 1rem 0;
+	background-color: #fff;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	background-clip: padding-box;
+}
+
+.card .card-content {
+	padding-bottom: 30px;
+}
+
+.card .card-content {
+	padding: 20px;
+	-webkit-border-radius: 0 0 2px 2px;
+	-moz-border-radius: 0 0 2px 2px;
+	border-radius: 0 0 2px 2px;
+	background-clip: padding-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.container .row {
+	margin-left: -0.75rem;
+	margin-right: -0.75rem;
+}
+
+.text-center {
+	text-align: center;
+}
+
+#skills h4 {
+	border-bottom: 1px solid #ddd;
+	margin-bottom: 30px;
+	padding-bottom: 20px;
+}
+
+.light,
+footer.page-footer .footer-copyright {
+	font-weight: 300;
+}
+
+.row .col.m2 {
+	width: 16.66667%;
+	margin-left: 0;
+
+}
+
+.row .col.s4 {
+	width: 33.33333%;
+	margin-left: 0;
+}
+
+.row .col {
+	float: left;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 0 0.75rem;
+}
+
+.brown-text {
+	color: #795548 !important;
+}
