--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3676,19 +3676,36 @@ html {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	width: 800px; /* Set a fixed width that fits exactly 5 elements */
-	margin: 0 auto; /* Center the card content */
+	width: 1000px; /* Set a fixed width that fits exactly 5 elements */
+	margin: 0 auto;
+}
+
+@media (min-width: 600px) {
+    /* For screens wider than 600px, set a fixed width for the card content */
+    .card .card-content {
+        width: 600px;
+    }
+}
+
+@media (min-width: 900px) {
+    /* For screens wider than 900px, set a different fixed width for the card content */
+    .card .card-content {
+        width: 1000px;
+    }
 }
 
 .row.text-center {
-	display: flex;
-	justify-content: center;
+    display: flex;
+    flex-wrap: nowrap; /* Prevent elements from wrapping to a new row */
+    justify-content: flex-start; /* Align elements to the left */
+    overflow-x: auto; /* Enable horizontal scrolling if elements exceed the container width */
 }
 
+
 .row.text-center > div {
-	width: 100px; /* Set a fixed width for each .col element */
-	text-align: center;
-	margin: 20px; /* Adjust the margin between the .col elements */
+    flex: 0 0 auto; /* Allow elements to have their own width */
+    text-align: center;
+    margin: 0; /* Remove the margin */
 }
 
 @media (max-width: 600px) {
@@ -3732,7 +3749,7 @@ footer.page-footer .footer-copyright {
 }
 
 .row .col.s4 {
-	width: 33.33333%;
+	width: 20%;
 	margin-left: 0;
 }
 
@@ -3744,15 +3761,49 @@ footer.page-footer .footer-copyright {
 	padding: 0 0.75rem;
 }
 
-.brown-text {
-	color: #795548 !important;
-}
-
 #skills .col img.responsive-img {
     margin: 0 auto;
     max-height: 100px;
     padding-bottom: 10px;
     text-align: center;
-    vertical-align: middle;
+    vertical-align: left;
     display: table-cell;
 }
+
+/* Add this style to position the skill bar at the bottom of the image */
+.responsive-img {
+	position: relative; /* Make sure the container is relative */
+  }
+  
+  .skill-bar {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 0;
+	overflow: hidden;
+	background-color: #4CAF50; /* Customize the skill bar color */
+	transition: height 0.3s; /* Add a smooth transition effect */
+  }
+  
+  /* Show the skill bar when hovering over .responsive-img */
+  .responsive-img:hover + .skill-bar{
+	height: 8px; /* Customize the height of the skill bar */
+  }
+  
+  .overlay {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	transition: .5s ease;
+	background-color: #008CBA;
+  }
+
+  .responsive-img:hover .overlay {
+	opacity: 0;
+  }
