--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -29,18 +29,91 @@ body {
   }
 }
 
+/* Star background */
 .star {
+  position: absolute;
+  background-color: white;
+  border-radius: 50%;
+  /* Make dots circular */
   animation: twinkle 2s infinite ease-in-out;
 }
 
-@keyframes twinkle {
+.star.star-shape-1 {
+  clip-path: polygon(50% 0%,
+      61% 35%,
+      98% 35%,
+      68% 57%,
+      79% 91%,
+      50% 70%,
+      21% 91%,
+      32% 57%,
+      2% 35%,
+      39% 35%);
+}
+
+.star.star-shape-2 {
+  clip-path: polygon(40% 40%,
+      50% 0,
+      60% 40%,
+      100% 50%,
+      60% 60%,
+      50% 100%,
+      40% 60%,
+      0% 50%);
+}
+
+.star.star-shape-3 {
+  clip-path: polygon(100% 50%, 75.98% 65%, 75% 93.3%, 50% 80%, 25% 93.3%, 24.02% 65%, 0% 50%, 24.02% 35%, 25% 6.7%, 50% 20%, 75% 6.7%, 75.98% 35%);
+}
+
+.star.star-shape-4 {
+  clip-path: polygon(100% 50%, 77.72% 61.48%, 85.36% 85.36%, 61.48% 77.72%, 50% 100%, 38.52% 77.72%, 14.64% 85.36%, 22.28% 61.48%, 0% 50%, 22.28% 38.52%, 14.64% 14.64%, 38.52% 22.28%, 50% 0%, 61.48% 22.28%, 85.36% 14.64%, 77.72% 38.52%);
+}
+
+/* Twinkle animation */
+@keyframes twinkle1 {
+
+  0%,
+  20%,
+  100% {
+    opacity: 1;
+  }
+
+  10%,
+  50%,
+  90% {
+    opacity: 0.6;
+  }
+
+  30%,
+  70% {
+    opacity: 0.3;
+  }
+}
+
+@keyframes twinkle2 {
 
   0%,
   100% {
     opacity: 1;
   }
 
-  50% {
-    opacity: 0.5;
+  25%,
+  75% {
+    opacity: 0.3;
   }
+}
+
+
+.star {
+  animation: twinkle1 8s infinite ease-in-out;
+}
+
+.star.star-shape-1 {
+  animation: twinkle2 4s infinite ease-in-out;
+}
+
+
+.star.star-shape-3 {
+  animation: twinkle1 8s infinite ease-in-out;
 }
